Fix image spacing.

--- a/css/global.css
+++ b/css/global.css
@@ -1021,15 +1021,15 @@ h1,h2,h3,h4{
     width:810px;
 }
    .thumbnails p {
-      width: 264px;
+      width: 810px;
       float: left; 
       margin:3px;
     }
       .thumbnails p a {
         float: left;
         display: block;
-        width:264px;
-        padding: 0; 
+        width: 264px;
+        padding: 3px; 
       }
         .thumbnails p a img {
           width: 260px;
